# core_module

./: .gitignore  LICENSE  core_functions.md  pyproject.toml  readme.md  requirements.txt
backups/: 20251117_133549_sample.zip.json  20251117_134411_sample.zip.json  20251118_000013_sample.zip.json  20251118_092952_sample.zip.json  20251118_113004_sample.txt.json  20251118_113005_sample.txt.json  20251118_113005_sample.zip.json
core/: C00_set_packages.py  C01_set_file_paths.py  C02_system_processes.py  C03_logging_handler.py  C04_config_loader.py  C05_error_handler.py  C06_validation_utils.py  C07_datetime_utils.py  C08_string_utils.py  C09_io_utils.py  C10_file_backup.py  C11_data_processing.py  C12_data_audit.py  C13_gui_helpers.py  C14_snowflake_connector.py  C15_sql_runner.py  C16_cache_manager.py  C17_web_automation.py  C18_parallel_executor.py  C19_api_manager.py  C20_google_api_integration.py
gui/: G00a_gui_packages.py  G01a_style_config.py  G01b_style_base.py  G01b_style_engine.py  G01c_text_styles.py  G01c_widget_primitives.py  G01d_container_styles.py  G01d_layout_primitives.py  G01e_gui_base.py  G01e_input_styles.py  G01f_control_styles.py  G01f_demo_all_primitives.py  G02a_layout_utils.py  G02a_widget_primitives.py  G02b_container_patterns.py  G02b_layout_utils.py  G02c_form_patterns.py  G02c_gui_base.py  G02d_debug_utils.py  G02e_widget_components.py  G03a_layout_patterns.py  G03a_navigation.py  G03b_app_menu.py  G03b_container_patterns.py  G03c_dynamic_layout_engine.py  G03c_form_patterns.py  G03d_app_state.py  G03d_table_patterns.py  G03f_renderer.py  (+12 more)
(+12 files in other folders)
